--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PersonalPortFolioAngular</title>
+  <title>AteshDev</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="HeroImage.jpg">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
 </head>
 <body>
+  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+
   <app-root></app-root>
 </body>
 </html>
