--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="HeroImage.jpg">
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 </head>
 <body>
-  <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
-
   <app-root></app-root>
 </body>
 </html>
